Fixed y overflow

--- a/style.sass
+++ b/style.sass
@@ -116,6 +116,7 @@ a:hover
 
 $family-sans-serif: "Nunito", sans-serif;
 $body-background-color: #4C4C4C;
+$body-overflow-y: auto;
 $input-placeholder-color: #747474;
 $input-color: white;
 $input-background-color: #2F2F2F;
